:lipstick: update vinyl-page
Signed-off-by: Sindre Kjelsrud <kjelsrudsindre@gmail.com>

--- a/src/pages/vinyl.astro
+++ b/src/pages/vinyl.astro
@@ -3,11 +3,12 @@ import SectionContainer from '../components/SectionContainer.astro';
 import vinyl from '../data/vinyl.json'
 
 const vinylByAlbumTitle = vinyl.reduce((acc:any, currentVinyl) => {
-    const { album, artist } = currentVinyl;
+    const { album, artist, cover } = currentVinyl;
     if (!acc[album]) {
         acc[album] = {
             vinyls: [],
-            artist: artist
+            artist: artist,
+            cover: cover
         };
     }
     acc[album].vinyls.push(currentVinyl);
@@ -28,11 +29,18 @@ const vinylData = Object.keys(vinylByAlbumTitle).map(albumTitle => {
 <SectionContainer>
     <main class="flex flex-col gap-4 mt-4">
 		<h1 class="text-3xl font-extrabold">📀 Platesamlinga</h1>
-        {vinylData.map((album) => (
-            <div class="flex flex-col">
-                <li><strong>{album.title}</strong> by {album.artist}</li>
-            </div>
-        ))}
+      <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-6">
+            {vinylData.map((album) => (
+                <div class="flex flex-col">
+                    <img
+                        src={album.cover}
+                        class="w-400"
+                    />
+                    <p class="font-bold">{album.title}</p>
+                    <p>{album.artist}</p>
+                </div>
+            ))}
+        </div>
 	</main>
 </SectionContainer>
 
