--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -12,12 +12,12 @@
       border: 0;
       background: none;
     }
-    .sun { fill: #815B5B; }
+    .sun { fill: #3B2C29; }
     .moon { fill: transparent; }
   
   
     :global(.dark) .sun { fill: transparent; }
-    :global(.dark) .moon { fill: #DDE6ED; }
+    :global(.dark) .moon { fill: #9AD3BB; }
   </style>
 
 <script is:inline>
