:lipstick: fix footer-margin
Signed-off-by: Sindre Kjelsrud <kjelsrudsindre@gmail.com>

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const today = new Date();
 <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
-<footer class="flex justify-between py-5 mt-5 mt-auto footerbg">
+<footer class="flex justify-between py-5 mt-5 footerbg">
 	<div>Sindre Kjelsrud &copy; {today.getFullYear()}</div>
 	<div class="social">
     <a href="https://github.com/SindreKjelsrud" aria-label="Link to my GitHub">
