--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,13 +14,13 @@
 }
 
 html {
-	background-color: var(--light-bg);
-	color: var(--light-1);
+	background-color: var(--dark-bg);
+	color: var(--dark-1);
 }
 
 html.dark {
-	background-color: var(--dark-bg);
-	color: var(--dark-1);
+	background-color: var(--light-bg);
+	color: var(--light-1);
 }
 
 body {
@@ -33,13 +33,13 @@ p {
 
 /* FOOTER */
 .footerbg {
-	background-color: var(--light-bg);
-	border-top: 1px solid var(--light-1);
+	background-color: var(--dark-bg);
+	border-top: 1px solid var(--dark-1);
 }
 
 .dark .footerbg {
-	background-color: var(--dark-bg);
-  	border-top: 1px solid var(--dark-1);
+	background-color: var(--light-bg);
+  	border-top: 1px solid var(--light-1);
 }
 
 /* BLOG */
@@ -84,25 +84,25 @@ p {
 	font-weight: 600;
 }
 
-.blog a { color: var(--light-link);}
+.blog a { color: var(--dark-link);}
 
-.dark .blog a { color: var(--dark-link);}
+.dark .blog a { color: var(--light-link);}
 
 .blog a:hover { text-decoration: underline 2px;}
 
-.blogtime { color: var(--light-2); }
+.blogtime { color: var(--dark-2); }
 
-.dark .blogtime { color: var(--dark-2); }
+.dark .blogtime { color: var(--light-2); }
 
 /* LOGS */
 .borderbottom {
 	border-bottom-width: 2px;
-	border-color: var(--light-3);
+	border-color: var(--dark-3);
 }
 
 .dark .borderbottom {
 	border-bottom-width: 2px;
-	border-color: var(--dark-3);
+	border-color: var(--light-3);
 }
 
 /* GALLERY */
@@ -134,11 +134,11 @@ p {
 }
 
 .cv a { 
-	color: var(--light-link);
+	color: var(--dark-link);
 	font-size: small;
 }
 
-.dark .cv a { color: var(--dark-link);}
+.dark .cv a { color: var(--light-link);}
 
 .cv a:hover { text-decoration: underline 2px;;}
 
@@ -162,10 +162,10 @@ code {
 
 blockquote {
 	padding: 0 0 0 10px;
-	border-left: 5px solid var(--light-1);
+	border-left: 5px solid var(--dark-1);
 }
 
 .dark blockquote {
 	padding: 0 0 0 10px;
-	border-left: 5px solid var(--dark-1);
+	border-left: 5px solid var(--light-1);
 }
