--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,13 +24,13 @@ const today = new Date();
 <footer class="flex justify-between py-5 mt-5 footerbg">
 	<div>Sindre Kjelsrud &copy; {today.getFullYear()}</div>
 	<div class="flex gap-1">
-    <a href="https://github.com/SindreKjelsrud" aria-label="Link to my GitHub">
+    <a href="https://github.com/SindreKjelsrud" aria-label="Link to my GitHub" target="_blank">
       <img id="githubImage" height="30" width="30" src="/socials/github_dark.svg" alt="GitHub"/>
     </a>
-    <a href="https://open.spotify.com/user/kjelsrud!" aria-label="Link to my Spotify">
+    <a href="https://open.spotify.com/user/kjelsrud!" aria-label="Link to my Spotify" target="_blank">
       <img id="spotifyImage" height="30" width="30" src="/socials/spotify_dark.svg" alt="Spotify"/>
     </a>
-    <a href="https://webring.xxiivv.com/#sid" target="_blank" rel="noopener">
+    <a href="https://webring.xxiivv.com/#sid" target="_blank" rel="noopener" target="_blank">
       <img id="webringImage" height="30" width="30" src="/socials/webring_dark.svg" alt="XXIIVV webring"/>
     </a>
   </div>
